--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,11 @@ body {
   font-family: sans-serif;
 }
 
+strong {
+  font-family: cursive;
+  font-size: 130%;
+}
+
 #header {
   background-color: #e2dde7;
   padding: 30px;
@@ -22,6 +27,8 @@ body {
 .links:hover {
   background-color: #7754df;
   color: #cae77a;
+  padding: 5px;
+  font-size: 15px;
 }
 
 #content {
@@ -29,7 +36,7 @@ body {
   float: right;
   border: 3px dotted #4e2057;
   padding: 10px;
-  width: 340px;
+  width: 350px;
 }
 
 h2 {
@@ -75,9 +82,14 @@ a {
   text-decoration: underline;
 }
 
+.project:hover {
+  background-color: #774484;
+  padding: 4px;
+}
+
 #milli-slides {
   position: absolute;
-  top: 300px;
+  top: 330px;
   right: 150px;
   border: dashed #d445b0;
 }
