--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,40 @@
-body {
+.row {
+  padding: 20px;
+}
+
+#one {
+  background-color: #dacedc;
+}
+
+#two {
+  background-color: #a695af
+}
+
+#three {
+  background-color: #9c79a9
+}
+
+#four-five {
+  background-color: #664a79
+}
+
+#six {
+  background-color: #65567a;
+}
+
+.project {
+  color: white;
+  font-weight: bold;
+}
+
+.project:hover {
+  background-color: #774484;
+  padding: 4px;
+}
+
+
+
+/*body {
   padding: 15px;
   font-family: sans-serif;
 }
@@ -94,4 +130,4 @@ a {
   right: 150px;
   border: 5px double #441256;
   padding: 3px
-}
+}*/
